# linker-sections-init-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/demo/: Cargo.toml  memory.x
examples/demo/src/: main.rs
examples/static-cell/: Cargo.toml  build.rs  memory.x
examples/static-cell/src/: main.rs
linker-sections/: Cargo.toml
linker-sections/src/: lib.rs
